# ChangeLog for media-libs/libwmf
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libwmf/ChangeLog,v 1.51 2007/02/17 22:27:56 grobian Exp $

  17 Feb 2007; Fabian Groffen <grobian@gentoo.org> libwmf-0.2.8.4.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  04 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -libwmf-0.2.8.2.ebuild, -libwmf-0.2.8.3.ebuild, -libwmf-0.2.8.3-r1.ebuild:
  clean out old, non-modX ebuilds (bug #129125)

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> libwmf-0.2.8.3-r1.ebuild,
  libwmf-0.2.8.4.ebuild:
  Marked 0.2.8.3-r1 && 0.2.8.4 stable on mips.

  30 Aug 2006; Aron Griffis <agriffis@gentoo.org> libwmf-0.2.8.4.ebuild:
  Mark 0.2.8.4 stable on ia64

  08 Aug 2006; Rene Nussbaumer <killerfox@gentoo.org> libwmf-0.2.8.4.ebuild:
  Stable on hppa. See bug #139325.

  08 Aug 2006; Thomas Cort <tcort@gentoo.org> libwmf-0.2.8.4.ebuild:
  Stable on alpha wrt security Bug #139325.

  07 Aug 2006; Scott Stoddard <deltacow@gentoo.org> libwmf-0.2.8.4.ebuild:
  Stable on amd64 (re bug 139325).

  07 Aug 2006; Luca Barbato <lu_zero@gentoo.org> libwmf-0.2.8.4.ebuild:
  Marked ppc

  07 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> libwmf-0.2.8.4.ebuild:
  Stable on sparc wrt security #139325

  07 Aug 2006; Markus Rothe <corsair@gentoo.org> libwmf-0.2.8.4.ebuild:
  Stable on ppc64; bug #139325

  07 Aug 2006; Alastair Tse <liquidx@gentoo.org> libwmf-0.2.8.4.ebuild:
  stable bump for x86

*libwmf-0.2.8.4 (07 Aug 2006)

  07 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  +files/libwmf-0.2.8.4-build.patch,
  +files/libwmf-0.2.8.4-intoverflow.patch, +libwmf-0.2.8.4.ebuild:
  Version bump with fix from Fedora for security issue #139325.

  31 Jul 2006; Simon Stelling <blubb@gentoo.org> libwmf-0.2.8.3-r1.ebuild:
  stable on amd64

  17 Jul 2006; Jason Wever <weeve@gentoo.org> libwmf-0.2.8.3-r1.ebuild:
  Stable on SPARC wrt bug #129125.
