@@ -1,24 +1,6 @@
 AUX libwmf-0.2.8.4-build.patch 1340 RMD160 d0ee933b7bd3d3b299859c8c36e542298049343b SHA1 81e1f460c426c3db37606ec3cc8da66b52c11fa3 SHA256 e12d0cd079b70fc83f87f09d262eee901707f27fe5f509e65ff108aa8cdccadb
-MD5 38162ee2a4a9ab4655fda6b4a8875041 files/libwmf-0.2.8.4-build.patch 1340
-RMD160 d0ee933b7bd3d3b299859c8c36e542298049343b files/libwmf-0.2.8.4-build.patch 1340
-SHA256 e12d0cd079b70fc83f87f09d262eee901707f27fe5f509e65ff108aa8cdccadb files/libwmf-0.2.8.4-build.patch 1340
 AUX libwmf-0.2.8.4-intoverflow.patch 971 RMD160 4b5c414021a2b663032aa90e9f40f05e1389b503 SHA1 6f130ea9f639ccf88fef0fda74cf9fa3956f81b5 SHA256 b19f80f742c22138beb6d1943f6cbedc0db2a8c72419bf8bf9216e1f806d4690
-MD5 af50a4b45bd99e0a489e04c32c1bdf36 files/libwmf-0.2.8.4-intoverflow.patch 971
-RMD160 4b5c414021a2b663032aa90e9f40f05e1389b503 files/libwmf-0.2.8.4-intoverflow.patch 971
-SHA256 b19f80f742c22138beb6d1943f6cbedc0db2a8c72419bf8bf9216e1f806d4690 files/libwmf-0.2.8.4-intoverflow.patch 971
 DIST libwmf-0.2.8.4.tar.gz 2169375 RMD160 98cd631adb5bb332d9224d04bc8a265c105435f2 SHA1 822ab3bd0f5e8f39ad732f2774a8e9f18fc91e89 SHA256 5b345c69220545d003ad52bfd035d5d6f4f075e65204114a9e875e84895a7cf8
-EBUILD libwmf-0.2.8.4.ebuild 2286 RMD160 cf14f35dd0d3cca820a4c8e8036db6f5f5b666f7 SHA1 02c4900b896b7d3d3288d835ce2ac30aa5c44a47 SHA256 ee0e86d14604220035780621e69ac5a3d20caf642b4ec4d7d22a3e912780139e
-MD5 d028c208f68e331f29a698a6400cb685 libwmf-0.2.8.4.ebuild 2286
-RMD160 cf14f35dd0d3cca820a4c8e8036db6f5f5b666f7 libwmf-0.2.8.4.ebuild 2286
-SHA256 ee0e86d14604220035780621e69ac5a3d20caf642b4ec4d7d22a3e912780139e libwmf-0.2.8.4.ebuild 2286
-MISC ChangeLog 7196 RMD160 d7da6b9ca0767094e264cf396e65937e5acb9839 SHA1 d1adba0b8b3c6b3a9e42a88e1ca08c37e5d12434 SHA256 ef861a7bd381507e45863b1ef4d65e23057c74e236b247fcf49d760160327594
-MD5 c02eae7d855a29596de5c38edd4a493a ChangeLog 7196
-RMD160 d7da6b9ca0767094e264cf396e65937e5acb9839 ChangeLog 7196
-SHA256 ef861a7bd381507e45863b1ef4d65e23057c74e236b247fcf49d760160327594 ChangeLog 7196
+EBUILD libwmf-0.2.8.4.ebuild 2414 RMD160 dafec1a43ee7125936b2967006bd91d6f7fc24f2 SHA1 3944d41cd5e1c3dfa04987d1e3fe803cf869e705 SHA256 4c79115a2e932c8f0f520308f7e847bf1b2bb68ba7b6b2ff12a30c769538f8a5
+MISC ChangeLog 7392 RMD160 75abaf569623b9079552edfe32b34a623344a2ff SHA1 91bf86a6507b460985bd627b7d2ad3dacdbb6733 SHA256 848b03f697d22ef9431c2201f4fb9f3f932d54219e01ebe577dfca35d00c9b82
 MISC metadata.xml 198 RMD160 ecb3dd5b9b5c15998184dfda3dd755184141cac2 SHA1 2f9abf78f7ff06b358d4462b4aecfce8774ac7a3 SHA256 0ada8d2cad084a20adb963bc7d24f6d332fc599e8ef2d25bf053561ad2b98c07
-MD5 56e3c453f3fa414649d2454a760fad1f metadata.xml 198
-RMD160 ecb3dd5b9b5c15998184dfda3dd755184141cac2 metadata.xml 198
-SHA256 0ada8d2cad084a20adb963bc7d24f6d332fc599e8ef2d25bf053561ad2b98c07 metadata.xml 198
-MD5 7d102fa3f16787c4915f1a51e0f3455c files/digest-libwmf-0.2.8.4 247
-RMD160 7bdc1d9ac2daf82439b435b515007cdeb0284472 files/digest-libwmf-0.2.8.4 247
-SHA256 189c7ea072cb04cc391fef850f4865b6194e15716c1f09e61d7e8585644316ba files/digest-libwmf-0.2.8.4 247
