@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libwmf
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libwmf/ChangeLog,v 1.51 2007/02/17 22:27:56 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libwmf/ChangeLog,v 1.53 2007/05/04 16:49:49 uberlord Exp $
+
+  04 May 2007; Roy Marples <uberlord@gentoo.org> libwmf-0.2.8.4.ebuild:
+  Keyworded ~x86-fbsd
+
+  30 Apr 2007; Marius Mauch <genone@gentoo.org> libwmf-0.2.8.4.ebuild:
+  Replacing einfo with elog
 
   17 Feb 2007; Fabian Groffen <grobian@gentoo.org> libwmf-0.2.8.4.ebuild:
   Dropped ppc-macos keyword, see you in prefix
